# shippo-legacy

./: .gitignore  README.md  pyproject.toml  setup.py
shippo/: __init__.py
